--- a/src/pages/home/sections/homeHero/homeHero.scss
+++ b/src/pages/home/sections/homeHero/homeHero.scss
@@ -1,5 +1,5 @@
 .HomeHero {
-  background: url('../../../../assets/heroBg.gif') lightgray 0px -7.377px / 99.988%
+  background: url('../../../../assets/bgvid.gif') lightgray 0px -7.377px / 99.988%
     100.877% no-repeat;
   height: 90vh;
   width: 100%;
