--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,15 +1,16 @@
 .Header {
-    position: fixed; // or `sticky`
+  position: fixed; // or `sticky`
   top: 0;
   left: 0;
-  height: 6.5vw; 
+  height: 4.5vw;
   z-index: 1000;
   width: 100%;
   gap: 1vw;
-  padding: 2vw 5vw;
+  padding: .5vw 5vw;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  background: #0f0f0f;
   height: max-content;
 
   .logo {
@@ -36,25 +37,24 @@
       text-align: center;
       border: 0.1vw solid #fff;
     }
-.link {
-  transition: transform 0.2s ease, background-color 0.2s ease;
+    .link {
+      transition: transform 0.2s ease, background-color 0.2s ease;
 
-  &:hover {
-    transform: translateY(2px);
-    background-color: #ff6a00;
-    color: #fff;
-  }
+      &:hover {
+        transform: translateY(2px);
+        background-color: #ff6a00;
+        color: #fff;
+      }
 
-  &:active {
-    transform: scale(0.97);
-  }
-}
-.link.active {
-  background-color: #ff6a00;
-  color: #fff;
-  border-color: #ff6a00;
-}
-
+      &:active {
+        transform: scale(0.97);
+      }
+    }
+    .link.active {
+      background-color: #ff6a00;
+      color: #fff;
+      border-color: #ff6a00;
+    }
   }
 
   .royalLogo {
