feat - learn component added

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@ body,
   background: #0f0f0f;
 
   .app-content {
-  padding-top: 4.5vw; // Adjust based on actual header height
+  padding-top: 5vw; 
   min-height: 100vh;
   background-color: #0f0f0f;
 }
