feat - learn component added

--- a/src/pages/home/sections/learn/learn.scss
+++ b/src/pages/home/sections/learn/learn.scss
@@ -100,7 +100,7 @@
     z-index: 1;
     position: absolute;
     border-radius: 1015px;
-    background: #ff6a00;
+    background: #a91802;
     mix-blend-mode: plus-lighter;
     filter: blur(227.10000610351562px);
   }
