--- a/src/pages/home/sections/homeHero/homeHero.scss
+++ b/src/pages/home/sections/homeHero/homeHero.scss
@@ -8,6 +8,7 @@
     z-index: 1;
     width: 100%;
     height: 100%;
+    object-fit: cover;
   }
   
   .overlay{
@@ -60,12 +61,17 @@
         border-radius: 9px;
         background: #fff;
         display: flex;
+        gap: 0.4vw;
         color: #000;
         font-size: 32px;
         font-style: normal;
         font-weight: 600;
         line-height: normal;
-        letter-spacing: -1.92px;    
+        letter-spacing: -1.92px;   
+        
+        &:hover{
+          background-color: #FF6A00;
+        }
     }
 
     .info{
