--- a/src/pages/home/sections/learn/learn.scss
+++ b/src/pages/home/sections/learn/learn.scss
@@ -1,6 +1,6 @@
 .Learn {
   width: 100%;
-  padding: 2.5% 5%;
+  padding: 5%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -33,12 +33,17 @@
       border-radius: 9px;
       background: #fff;
       display: flex;
+      gap: 0.4vw;
       color: #000;
       font-size: 32px;
       font-style: normal;
       font-weight: 600;
       line-height: normal;
       letter-spacing: -1.92px;
+
+      &:hover {
+        background-color: #ff6a00;
+      }
     }
   }
 
@@ -49,6 +54,8 @@
     gap: 5%;
 
     .image {
+      mix-blend-mode: difference;
+      position: relative;
       width: 38%;
       aspect-ratio: 0.86;
 
@@ -57,6 +64,16 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+      }
+
+      .RE {
+        position: absolute;
+        border-radius: 0;
+        z-index: 2;
+        width: max-content;
+        height: max-content;
+        top: 7%;
+        right: 7%;
       }
     }
 
