--- a/src/pages/home/sections/learn/learn.scss
+++ b/src/pages/home/sections/learn/learn.scss
@@ -15,7 +15,7 @@
     .tHead {
       color: #fff;
       font-family: Inter;
-      font-size: 85px;
+      font-size: 4.4270833vw;
       font-style: normal;
       font-weight: 600;
       line-height: 86.09%; /* 73.176px */
@@ -35,7 +35,7 @@
       display: flex;
       gap: 0.4vw;
       color: #000;
-      font-size: 32px;
+      font-size: 1.6vw;
       font-style: normal;
       font-weight: 600;
       line-height: normal;
@@ -85,7 +85,7 @@
 
       .title {
         color: #fff;
-        font-size: 45px;
+        font-size: 2.34375vw;
         font-style: normal;
         font-weight: 600;
         line-height: 113.683%; /* 51.157px */
@@ -95,7 +95,7 @@
       p {
         width: 93%;
         color: #fff;
-        font-size: 24px;
+        font-size: 1.25vw;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
@@ -111,8 +111,8 @@
   .shape1 {
     bottom: -47%;
     right: -20%;
-    width: 1015px;
-    height: 529px;
+    width: 52.86458333vw;
+    height: 27.55208333vw;
     flex-shrink: 0;
     z-index: 1;
     position: absolute;
