--- a/src/pages/home/sections/scroll/scroll.scss
+++ b/src/pages/home/sections/scroll/scroll.scss
@@ -15,7 +15,7 @@
   .scroll-text {
     display: inline-block;
     color: #000;
-    font-size: 36px;
+    font-size: 1.875vw;
     font-style: normal;
     font-weight: 700;
     letter-spacing: -2.16px;
@@ -25,9 +25,9 @@
     }
 
     .separator {
-      font-size: 46px; 
+      font-size: 2.3948333vw;
       margin: 0 1vw;
-      color: #000; 
+      color: #000;
     }
   }
 
