--- a/src/pages/home/sections/weProvide/weProvide.scss
+++ b/src/pages/home/sections/weProvide/weProvide.scss
@@ -12,7 +12,7 @@
 
     .heading {
       color: #fff;
-      font-size: 85px;
+      font-size: 4.427083333vw;
       font-style: normal;
       font-weight: 600;
       line-height: 86.09%; /* 73.176px */
@@ -33,7 +33,7 @@
       display: flex;
       gap: 0.4vw;
       color: #000;
-      font-size: 32px;
+      font-size: 1.6666vw;
       font-style: normal;
       font-weight: 600;
       line-height: normal;
@@ -84,14 +84,14 @@
         align-items: center;
         position: absolute;
         border-radius: 0 0 20px 20px;
-        height: 6vw;
+        height: 8vw;
         cursor: pointer;
         width: 100%;
         bottom: 0%;
         padding: 0.7vw 3vw;
         background: #fff;
         color: #000;
-        font-size: 32px;
+        font-size: 1.6vw;
         font-style: normal;
         font-weight: 600;
         line-height: normal;
@@ -113,8 +113,8 @@
 
   .shape1 {
     position: absolute;
-    width: 1624px;
-    height: 348px;
+    width: 84.58333vw;
+    height: 18.125vw;
     flex-shrink: 0;
     border-radius: 1624px;
     background: #ff6a00;
@@ -127,7 +127,7 @@
   .subHeading {
       padding: 0 5%;
     color: #fff;
-    font-size: 45px;
+    font-size: 2.34375vw;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
