--- a/src/pages/home/sections/emotions/emotions.scss
+++ b/src/pages/home/sections/emotions/emotions.scss
@@ -2,8 +2,9 @@
   width: 100%;
   height: 89vh;
   background: url('../../../../assets/emotionBg.jpg') lightgray -0.155px -265.66px /
-    100.016% 132.677% no-repeat;
+    100.016% 134.677% no-repeat;
   position: relative;
+  object-fit: cover;
 
   .image {
     position: absolute;
