--- a/src/pages/home/sections/testimonials/testimonials.scss
+++ b/src/pages/home/sections/testimonials/testimonials.scss
@@ -139,4 +139,18 @@
       }
     }
   }
+  .contact{
+    width: 69%;
+    color: #FFF;
+font-size: 2.34375vw;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+letter-spacing: -1.8px;
+ 
+a{
+  color: #ff6a00;
+  cursor: pointer;
+}
+}
 }
