--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,7 +1,86 @@
 .Footer {
-    position: relative;
-    z-index: 1;
+  position: relative;
+  z-index: 1;
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   background: #ff6a00;
+  z-index: 999;
+
+  .image {
+    z-index: 2;
+    position: absolute;
+    width: 90%;
+    aspect-ratio: 1;
+    top: -110%;
+    right: 5%;
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: contain;
+    }
+  }
+
+  .navlinks {
+    position: relative;
+    z-index: 3;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding-top: 27.5%;
+
+    .link {
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 1vw;
+      justify-content: center;
+      width: 25%;
+      color: #000;
+      font-size: 1.45833vw;
+      padding: 2vw;
+      border: 1px solid #000;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      letter-spacing: -1.68px;
+
+      &:hover{
+        background-color: antiquewhite;
+      }
+    }
+  }
+
+  .bottom {
+    width: 100%;
+    padding: 2vw 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .tab {
+      z-index: 3;
+      width: 33%;
+      align-items: center;
+      justify-content: center;
+      display: flex;
+      gap: .5vw;
+      color: #0f0f0f;
+      font-size: 1.041666vw;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      letter-spacing: -1.2px;
+
+      a {
+        cursor: pointer;
+        color: #0f0f0f;
+        font-size: 1.041666vw;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        letter-spacing: -1.2px;
+      }
+    }
+  }
 }
