--- a/src/pages/home/sections/contact/contact.scss
+++ b/src/pages/home/sections/contact/contact.scss
@@ -50,7 +50,6 @@
   .desc {
     width: 74%;
     color: #fff;
-    font-family: Inter;
     font-size: 1.25vw;
     font-style: normal;
     font-weight: 400;
@@ -62,6 +61,8 @@
     display: flex;
 
     .form {
+      position: relative;
+      z-index: 1000;
       width: 65%;
       display: flex;
       flex-direction: column;
@@ -79,6 +80,7 @@
 
       input,
       select {
+        cursor: pointer;
         border-radius: 5px;
         background: rgba(217, 217, 217, 0.07);
         backdrop-filter: blur(11.899999618530273px);
