--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,15 +1,18 @@
 .Contact {
   width: 100%;
   display: flex;
-  padding: 2% 5% 10% 5%;
+  padding: 0;
   flex-direction: column;
+  gap: 6.0417vw;
+  position: relative;
 
   .heading {
+    padding: 2% 5% 0% 5%;
     color: #fff;
-    font-size: 85px;
+    font-size: 4.427083333vw;
     font-style: normal;
     font-weight: 600;
-    line-height: 86.09%; /* 73.176px */
+    line-height: 86.09%;
     letter-spacing: -5.1px;
 
     span {
@@ -18,14 +21,15 @@
   }
 
   .infoWrapper {
+    padding: 0% 5%;
     display: flex;
     flex-direction: column;
-    gap: 2vw;
-    width: 70%;
+    gap: 6.25vw;
+    width: 71%;
 
     .info {
       display: flex;
-      gap: 1vw;
+      gap: 1.822916667vw;
       align-items: center;
 
       .key {
@@ -46,5 +50,39 @@
         letter-spacing: -1.6px;
       }
     }
+  }
+
+  .mechanic {
+    z-index: 1;
+    position: absolute;
+    right: -9%;
+    top: 6.4%;
+    transform: rotateY(180deg);
+  }
+
+  .shape2 {
+    position: absolute;
+    width: 1624px;
+    height: 665px;
+    flex-shrink: 0;
+    border-radius: 1624px;
+    background: #ff6a00;
+    mix-blend-mode: plus-lighter;
+    filter: blur(227.10000610351562px);
+    right: -50%;
+    top: 30%;
+  }
+
+  .map {
+    position: relative;
+    z-index: 3;
+    width: 100%;
+    height: 30vw;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(255, 106, 0, 0.3);
+  }
+
+  .form{
+    height: 90vh;
   }
 }
