--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,7 +2,7 @@
   position: relative;
   z-index: 1;
   width: 100%;
-  height: 90vh;
+  height: max-content;
   background: #ff6a00;
   z-index: 999;
 
@@ -45,7 +45,7 @@
       line-height: normal;
       letter-spacing: -1.68px;
 
-      &:hover{
+      &:hover {
         background-color: antiquewhite;
       }
     }
@@ -64,7 +64,7 @@
       align-items: center;
       justify-content: center;
       display: flex;
-      gap: .5vw;
+      gap: 0.5vw;
       color: #0f0f0f;
       font-size: 1.041666vw;
       font-style: normal;
