--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,7 +8,7 @@
   padding: 0.5vw 5vw;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   background: #0f0f0fd7;
   height: max-content;
   transition: transform 0.3s ease-in-out;
@@ -20,6 +20,36 @@
   .logo {
     width: 20%;
     cursor: pointer;
+
+  }
+
+  .hamburger {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 1100;
+
+    span {
+      height: 3px;
+      background: #ff6a00;
+      border-radius: 2px;
+      transition: 0.3s;
+    }
+
+    &.open {
+      span:nth-child(1) {
+        transform: translateY(7px) rotate(45deg);
+      }
+      span:nth-child(2) {
+        opacity: 0;
+      }
+      span:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+      }
+    }
   }
 
   .navlinks {
@@ -33,16 +63,11 @@
       color: #ff6a00;
       font-family: Inter;
       font-size: 0.933333vw;
-      font-style: normal;
       font-weight: 600;
-      line-height: normal;
-      letter-spacing: -0.96px;
       border-radius: 2vw;
       padding: 0.7vw 1vw;
       text-align: center;
       border: 0.1vw solid #fff;
-    }
-    .link {
       transition: transform 0.2s ease, background-color 0.2s ease;
 
       &:hover {
@@ -54,17 +79,64 @@
       &:active {
         transform: scale(0.97);
       }
-    }
-    .link.active {
-      background-color: #ff6a00;
-      color: #fff;
-      border-color: #ff6a00;
+
+      &.active {
+        background-color: #ff6a00;
+        color: #fff;
+        border-color: #ff6a00;
+      }
     }
   }
 
   .royalLogo {
     width: 20%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
+
+  }
+
+  @media (max-width: 480px) {
+    padding: 3vw 5vw;
+
+    .hamburger {
+      display: flex;
+    }
+
+    .navlinks {
+      position: absolute;
+      top: 100%;
+      right: 0;
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      background: #0f0f0f;
+      gap: 4vw;
+      padding: 5vw 0;
+      display: none;
+
+      &.show {
+        display: flex;
+        
+      }
+
+      .link {
+        width: 80%;
+        font-size: 4vw;
+        padding: 3vw;
+        border: 1px solid #fff;
+      }
+    }
+
+    .logo {
+      width: 20%;
+
+      img{
+        width: 100%;
+      }
+    }
+
+    .royalLogo {
+      display: none;
+    }
   }
 }
