--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,13 @@ body
   min-height: 100vh;
   background-color: #0f0f0f;
 }
-
+  @media (max-width: 480px) {
+  html,
+body
+#root {
+  padding-top: 12vw;
+}
+  }
 }
 
 
