--- a/src/pages/home/sections/emotions/emotions.scss
+++ b/src/pages/home/sections/emotions/emotions.scss
@@ -45,3 +45,50 @@
     right: 5%;
   }
 }
+
+@media (max-width: 480px) {
+  .Emotions {
+    height: 175px;
+    background: url('../../../../assets/emotionBg.jpg') lightgray -0.03px -51.629px /
+      100.016% 132.677% no-repeat;
+
+    .image {
+      width: 15%;
+      height: 15%;
+      top: 5%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+
+    .logo{
+      width: 15%;
+      height: 15%;
+      bottom: 5%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+
+    .desc{
+      right: 6%;
+      top: 25%;
+      .title{
+        width: 70%;
+        font-size: 4vw;
+        letter-spacing: normal;
+      }
+
+      .since{
+        font-size: 2.2vw;
+        letter-spacing: normal;
+      }
+    }
+  }
+}
