--- a/src/pages/home/sections/homeHero/homeHero.scss
+++ b/src/pages/home/sections/homeHero/homeHero.scss
@@ -84,3 +84,59 @@
     }
   }
 }
+
+@media (max-width: 480px) {
+  .HomeHero {
+    height: max-content;
+
+    .bg-video {
+      height: 225px;
+    }
+
+    .overlay{
+      .heading{
+        padding-top: 1vw;
+        letter-spacing: normal;
+      }
+
+      .subHeading{
+        padding-top: 3vw;
+        letter-spacing: normal;
+        font-size: 4.8vw;
+      }
+
+      .desc{
+        padding-top: 7vw;
+        letter-spacing: normal;
+        font-size: 3.8vw;
+      }
+
+      .bottom{
+        padding-top: 5vw;
+        .contactUs{
+          align-items: center;
+          justify-content: center;
+          border-radius: 1.5vw;
+          gap: 2vw;
+          letter-spacing: normal;
+          font-size: 4vw;   
+          .arrow{
+            width: 4vw;
+            aspect-ratio: 1;
+            
+            img{
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+          }
+        }
+        .info{
+          font-size: 2vw;
+          letter-spacing: normal;
+        }
+      }
+    }
+    
+  }
+}
