--- a/src/pages/home/sections/weProvide/weProvide.scss
+++ b/src/pages/home/sections/weProvide/weProvide.scss
@@ -6,7 +6,7 @@
   gap: 2.5vw;
 
   .top {
-      padding: 0 5%;
+    padding: 0 5%;
     display: flex;
     justify-content: space-between;
 
@@ -79,7 +79,7 @@
       }
 
       .name {
-          display: flex;
+        display: flex;
         justify-content: space-between;
         align-items: center;
         position: absolute;
@@ -97,8 +97,8 @@
         line-height: normal;
         letter-spacing: -1.92px;
 
-        img{
-            scale: 1.3;
+        img {
+          scale: 1.3;
         }
         &:hover {
           background-color: #ff6a00;
@@ -125,7 +125,7 @@
   }
 
   .subHeading {
-      padding: 0 5%;
+    padding: 0 5%;
     color: #fff;
     font-size: 2.34375vw;
     font-style: normal;
@@ -142,19 +142,60 @@
     position: relative;
     background: url('../../../../assets/serviceBg.jpg');
     background-size: cover;
-      z-index: 2;
-      width: 100%;
-      height: 100vh;
+    z-index: 2;
+    width: 100%;
+    height: 100vh;
 
-      .royalLogo{
-        position: absolute;
-        top: 10%;
-        left: 5%;
+    .royalLogo {
+      position: absolute;
+      top: 10%;
+      left: 5%;
+    }
+    .logo {
+      position: absolute;
+      top: 6%;
+      right: 5%;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .WeProvide {
+    .top {
+      .heading {
+        letter-spacing: normal;
+        font-size: 5.5vw;
       }
-      .logo{
-        position: absolute;
-        top: 6%;
-        right: 5%;
+
+      .contactUs {
+        display: none;
       }
+    }
+
+    .services{
+      gap: 5vw;
+      .service{
+        height: 50vh;
+        width: 75%;
+        flex: 0 0 75%;
+        
+        .name{
+          height: 10vh;
+          font-size: 4.5vw;
+          letter-spacing: normal;
+        }
+
+        .arrow{
+          width: 4.5vw;
+          aspect-ratio: 1;
+
+          img{
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+          }
+        }
+      }
+    }
   }
 }
