--- a/src/pages/home/sections/homeHero/homeHero.scss
+++ b/src/pages/home/sections/homeHero/homeHero.scss
@@ -95,24 +95,24 @@
 
     .overlay{
       .heading{
-        padding-top: 1vw;
+        padding-top: 3%;
         letter-spacing: normal;
       }
 
       .subHeading{
-        padding-top: 3vw;
+        padding-top: 3%;
         letter-spacing: normal;
         font-size: 4.8vw;
       }
 
       .desc{
-        padding-top: 7vw;
+        padding-top: 7%;
         letter-spacing: normal;
         font-size: 3.8vw;
       }
 
       .bottom{
-        padding-top: 5vw;
+        padding-top: 5%;
         .contactUs{
           align-items: center;
           justify-content: center;
