--- a/src/pages/home/sections/learn/learn.scss
+++ b/src/pages/home/sections/learn/learn.scss
@@ -132,6 +132,7 @@
       }
 
       .contactUs {
+        padding: 2vw;
         align-items: center;
         justify-content: center;
         border-radius: 1.5vw;
