--- a/src/pages/home/sections/contact/contact.scss
+++ b/src/pages/home/sections/contact/contact.scss
@@ -80,6 +80,8 @@
 
       input,
       select {
+        border: none;
+        outline: none;
         letter-spacing: 0.1vw;
         cursor: pointer;
         border-radius: 5px;
@@ -141,5 +143,87 @@
     border-radius: 989px;
     background: #ff6a00;
     filter: blur(227.10000610351562px);
+  }
+}
+
+@media (max-width: 480px) {
+  .ContactHome {
+    .shape1 {
+      display: none;
+    }
+    .top {
+      .tHead {
+        letter-spacing: normal;
+        font-size: 5.5vw;
+      }
+
+      .contactUs {
+        padding: 2vw;
+        align-items: center;
+        justify-content: center;
+        border-radius: 1.5vw;
+        gap: 2vw;
+        letter-spacing: normal;
+        font-size: 4vw;
+        .arrow {
+          width: 4vw;
+          aspect-ratio: 1;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+      }
+    }
+
+    .desc {
+      letter-spacing: normal;
+      font-size: 3.5vw;
+    }
+
+    .bottom {
+      .mech {
+        display: none;
+      }
+
+      .form {
+        gap: 2vw;
+        width: 100%;
+
+        label {
+          letter-spacing: normal;
+          font-size: 4vw;
+        }
+
+        input,
+        select {
+          width: 100%;
+          padding: 3vw 5vw;
+          backdrop-filter: blur(100px);
+          font-size: 4vw;
+        }
+        .contactUs {
+          padding: 2vw;
+          align-items: center;
+          justify-content: center;
+          border-radius: 1.5vw;
+          gap: 2vw;
+          letter-spacing: normal;
+          font-size: 4.5vw;
+          .arrow {
+            width: 4vw;
+            aspect-ratio: 1;
+
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+          }
+        }
+      }
+    }
   }
 }
