--- a/src/pages/home/sections/delivery/delivery.scss
+++ b/src/pages/home/sections/delivery/delivery.scss
@@ -88,3 +88,82 @@
     letter-spacing: -1.44px;
   }
 }
+
+@media (max-width: 480px) {
+  .Delivery {
+    padding-top: 4%;
+    .top {
+      .tHead {
+        letter-spacing: normal;
+        font-size: 5.5vw;
+      }
+
+      .contactUs {
+        padding: 2vw;
+        align-items: center;
+        justify-content: center;
+        border-radius: 1.5vw;
+        gap: 2vw;
+        letter-spacing: normal;
+        font-size: 4vw;
+        .arrow {
+          width: 4vw;
+          aspect-ratio: 1;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+      }
+    }
+
+    .desc {
+      padding-top: 3%;
+      width: 100%;
+      font-size: 4.2vw;
+      letter-spacing: normal;
+    }
+
+    .banner {
+      border-radius: 3vw;
+      background: url('../../../../assets/deliveryBg.jpg') lightgray -0.091px -292.609px /
+        100.029% 446.394% no-repeat;
+      background-position: center;
+      background-size: cover;
+      height: 220px;
+
+      .image {
+        width: 15%;
+        height: 15%;
+        top: 5%;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
+        }
+      }
+
+      .logo {
+        width: 15%;
+        height: 15%;
+        bottom: 5%;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
+        }
+      }
+    }
+
+    .text {
+      letter-spacing: normal;
+      font-size: 4.2vw;
+      width: 100%;
+      font-weight: 400;
+    }
+  }
+}
