--- a/src/pages/home/sections/homeHero/homeHero.scss
+++ b/src/pages/home/sections/homeHero/homeHero.scss
@@ -114,6 +114,7 @@
       .bottom{
         padding-top: 5%;
         .contactUs{
+          padding: 2vw;
           align-items: center;
           justify-content: center;
           border-radius: 1.5vw;
