--- a/src/pages/home/sections/shine/shine.scss
+++ b/src/pages/home/sections/shine/shine.scss
@@ -126,3 +126,58 @@
     }
   }
 }
+
+@media (max-width: 480px) {
+.Shine{
+  padding-top: 3%;
+  .Shape1{
+    left: -10%;
+    width: 74vw;
+    height: 25vw;
+    filter: blur(-2);
+  }
+
+  .text{
+    font-size: 4vw;
+    letter-spacing: normal;
+  }
+  .available{
+    padding: 2%;
+    .service{
+      letter-spacing: normal;
+      font-size: 2.7vw;
+    }
+  }
+
+  .keep{
+    padding-top: 7%;
+    flex-direction: column-reverse;
+    gap: 5%;
+
+    .left{
+      width: 100%;
+      height: 240px;
+
+      img{
+        top: 0%;
+        left: -20%;
+      }
+      }
+
+    .right{
+      flex-direction: column;
+      justify-content: flex-start;
+      display: flex;
+      padding: 0 20% 0 0;
+      width: 100%;
+      font-size: 5.2vw;
+      letter-spacing: normal;
+    .short{
+      padding-top: 2%;
+      letter-spacing: normal;
+      font-size: 3vw;
+    }
+    }
+  }
+}
+}
