--- a/src/pages/home/sections/testimonials/testimonials.scss
+++ b/src/pages/home/sections/testimonials/testimonials.scss
@@ -154,3 +154,68 @@ a{
 }
 }
 }
+
+@media (max-width: 480px) {
+.Testimonials{
+  .top {
+      .heading {
+        letter-spacing: normal;
+        font-size: 5.5vw;
+      }
+
+      .contactUs {
+        padding: 2vw;
+        align-items: center;
+        justify-content: center;
+        border-radius: 1.5vw;
+        gap: 2vw;
+        letter-spacing: normal;
+        font-size: 4vw;
+        .arrow {
+          width: 4vw;
+          aspect-ratio: 1;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+      }
+    }
+
+    .cards{
+      height: 320px;
+
+      .card{
+        width: 100%;
+
+        .quote{
+          letter-spacing: normal;
+          font-size: 3.3vw;
+        }
+
+        .desc{
+
+          .details{
+            .name{
+              letter-spacing: normal;
+              font-size: 3vw;
+            }
+            .proud{
+              letter-spacing: normal;
+              font-size: 2.5vw;
+            }
+          }
+        }
+      }
+
+    }
+
+    .contact{
+      width: 100%;
+      letter-spacing: normal;
+      font-size: 4vw;
+    }
+}
+}
