--- a/src/pages/home/sections/whyChooseUs/whyChooseUs.scss
+++ b/src/pages/home/sections/whyChooseUs/whyChooseUs.scss
@@ -1,4 +1,8 @@
 .WhyChooseUs {
+
+  .shape1{
+    position: absolute;
+  }
   position: relative;
   padding: 2.5% 0;
   display: flex;
@@ -58,6 +62,7 @@
       }
 
       .bottom {
+        width: 100%;
         gap: 2vw;
         padding: 2vw 1vw;
         background: #fff;
@@ -107,4 +112,57 @@
       right: 5%;
     }
   }
+}
+
+@media (max-width: 480px) {
+.WhyChooseUs{
+  gap: 10vw;
+  .top{
+    .heading{
+      letter-spacing: normal;
+      font-size: 5.5vw;
+    }
+  }
+  .services {
+      gap: 5vw;
+      .service {
+        height: 60vh;
+        width: 75%;
+        flex: 0 0 75%;
+
+        .bottom {
+          padding: 5%;
+          height: 20vh;
+          letter-spacing: normal;
+
+          .name{
+            letter-spacing: normal;
+            font-size: 4.5vw;
+          }
+
+          .desc{
+            letter-spacing: normal;
+            font-size: 3.5vw;
+          }
+        }
+      }
+    }
+
+    .banner{
+      background-size: contain;
+      height: 166px;
+            .logo{
+      width: 15%;
+      height: 15%;
+      top: 9%;
+      right: 7%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+    }
+}
 }
