--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -96,7 +96,7 @@
   }
 
   @media (max-width: 480px) {
-    padding: 3vw 5vw;
+    padding: 1vw 5vw;
 
     .hamburger {
       display: flex;
@@ -129,9 +129,12 @@
 
     .logo {
       width: 20%;
+      aspect-ratio: 1.8;
 
       img{
+        object-fit: contain;
         width: 100%;
+        height: 100%;
       }
     }
 
