Mobile Responsive scss updated

--- a/src/pages/home/sections/homeHero/homeHero.scss
+++ b/src/pages/home/sections/homeHero/homeHero.scss
@@ -90,7 +90,7 @@
     height: max-content;
 
     .bg-video {
-      height: 245px;
+      height: 35vh;
     }
 
     .overlay{
@@ -114,7 +114,7 @@
       .bottom{
         padding-top: 5%;
         .contactUs{
-          padding: 2vw;
+          padding: 1.5vw;
           align-items: center;
           justify-content: center;
           border-radius: 1.5vw;
