--- a/src/pages/home/sections/contact/contact.scss
+++ b/src/pages/home/sections/contact/contact.scss
@@ -210,15 +210,16 @@
           justify-content: center;
           border-radius: 1.5vw;
           gap: 2vw;
+          font-weight: 600;
           letter-spacing: normal;
-          font-size: 4.5vw;
+          font-size: 3.7vw;
           .arrow {
             width: 4vw;
             aspect-ratio: 1;
 
             img {
-              width: 100%;
-              height: 100%;
+              width: 70%;
+              height: 70%;
               object-fit: cover;
             }
           }
