Mobile Responsive scss updated

--- a/src/pages/home/sections/delivery/delivery.scss
+++ b/src/pages/home/sections/delivery/delivery.scss
@@ -132,7 +132,7 @@
         100.029% 446.394% no-repeat;
       background-position: center;
       background-size: cover;
-      height: 220px;
+      height: 35vh;
 
       .image {
         width: 15%;
