--- a/src/pages/home/sections/whyChooseUs/whyChooseUs.scss
+++ b/src/pages/home/sections/whyChooseUs/whyChooseUs.scss
@@ -149,8 +149,8 @@
     }
 
     .banner{
-      background-size: contain;
-      height: 166px;
+      background-size: cover;
+      height: 27vh;
             .logo{
       width: 15%;
       height: 15%;
