--- a/src/pages/home/sections/emotions/emotions.scss
+++ b/src/pages/home/sections/emotions/emotions.scss
@@ -48,7 +48,7 @@
 
 @media (max-width: 480px) {
   .Emotions {
-    height: 175px;
+    height: 30vh;
     background: url('../../../../assets/emotionBg.jpg') lightgray -0.03px -51.629px /
       100.016% 132.677% no-repeat;
 
