--- a/src/pages/home/sections/weProvide/weProvide.scss
+++ b/src/pages/home/sections/weProvide/weProvide.scss
@@ -205,7 +205,7 @@
     }
 
     .banner {
-      height: 220px;
+      height: 35vh;
       .royalLogo {
         width: 15%;
         height: 15%;
