--- a/src/pages/home/sections/learn/learn.scss
+++ b/src/pages/home/sections/learn/learn.scss
@@ -125,6 +125,7 @@
 
 @media (max-width: 480px) {
   .Learn {
+    gap: 7vw;
     .top {
       .tHead {
         letter-spacing: normal;
@@ -154,11 +155,11 @@
     .bottom {
       background-color: transparent;
       flex-direction: column;
-      gap: 4.5vw;
+      gap: 5.5vw;
 
       .image {
         width: 100%;
-        height: 270px;
+        height: 40vh;
 
         .RE {
           display: none;
