--- a/src/pages/home/sections/whyChooseUs/whyChooseUs.scss
+++ b/src/pages/home/sections/whyChooseUs/whyChooseUs.scss
@@ -151,6 +151,7 @@
 
     .banner{
       background-size: cover;
+      background-position: left;
       height: 27vh;
             .logo{
       width: 15%;
