Mobile Responsive scss updated

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -91,7 +91,7 @@
     flex-direction: column;
     justify-content: flex-end;
     height: 30vh;
-    margin-top: 25vh;
+    // margin-top: 25vh;
 
     .image {
       right: 0;
