Mobile Responsive scss updated

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -36,6 +36,7 @@
 
   @media (max-width: 480px) {
   .About{
+    padding-bottom: 27vh;
     .heading{
       letter-spacing: normal;
       font-size: 7vw;
