--- a/src/pages/admin/components/shutter.scss
+++ b/src/pages/admin/components/shutter.scss
@@ -3,7 +3,7 @@
   inset: 0;
   z-index: 4;
   background: black;
-  pointer-events: none; // CRITICAL
+  pointer-events: none;
   transition: transform 0.15s linear;
 
   img {
@@ -11,4 +11,8 @@
     height: 100%;
     object-fit: cover;
   }
+}
+
+.shutter.open {
+  transform: translateY(-100%);
 }
