--- a/src/pages/admin/dashboard.scss
+++ b/src/pages/admin/dashboard.scss
@@ -5,8 +5,8 @@
   background: #0b0b0b;
   color: #fff;
   opacity: 0;
-  transform: translateY(40px);
-  transition: all 0.6s ease;
+  transform: translateY(1px);
+  transition: all .5s ease;
 }
 
 .dashboard.show {
@@ -15,13 +15,24 @@
 }
 
 .dashboard-content {
+  position: relative;
+  z-index: 10;
   flex: 1;
   padding: 40px;
   overflow-y: auto;
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   h1 {
-    margin-bottom: 20px;
-    font-size: 28px;
+    margin-bottom: 1vw;
+    font-size: 2vw;
     letter-spacing: 1px;
   }
+}
+
+.dashboard,
+.dashboard * {
+  pointer-events: auto;
 }
