--- a/src/pages/admin/sidebar.scss
+++ b/src/pages/admin/sidebar.scss
@@ -14,6 +14,11 @@
   letter-spacing: 1px;
 }
 
+.logout-btn{
+  font-size: 1.2vw;
+  top: 1.5vw;
+  padding: 0.5vw 1vw;
+}
 nav{
     display: flex;
     flex-direction: column;
@@ -25,7 +30,7 @@ nav button {
   padding: 12px 0;
   text-align: left;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 1.2vw;
   transition: color 0.2s ease;
 
   &:hover {
