--- a/src/pages/admin/invoice/invoiceCreate.scss
+++ b/src/pages/admin/invoice/invoiceCreate.scss
@@ -40,7 +40,7 @@
 /* =====================
    GRID INPUTS
 ===================== */
-.grid {
+.grid, .BikeDetails-form {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 14px;
@@ -61,6 +61,32 @@
   }
 }
 
+.BikeDetails-form{
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+
+  .up, .down {
+    justify-content: space-evenly;
+    display: flex;
+    gap: 14px;
+    margin-bottom: 14px;
+  }
+
+  .date, .time {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5vw;
+    align-items: center;
+    width: 50%;
+
+    label{
+      color:#ff6a00;
+      font-size: 16px;
+      font-weight: 600;
+    }
+  }
+}
 /* =====================
    CATEGORY ROW
 ===================== */
@@ -70,6 +96,31 @@
   border-radius: 8px;
   padding: 16px;
   margin-bottom: 14px;
+}
+
+.row-header {
+  display: flex;
+  label{
+    color: #ff6a00;
+    font-weight: 600;
+    font-size: 18px;
+  } 
+  justify-content: space-between;
+  align-items: center;
+}
+
+.remove-category {
+  margin-bottom: 1vw;
+  background: transparent;
+  border: none;
+  color: #ff4d4f;
+  cursor: pointer;
+  font-size: 14px;
+
+  &:hover {
+  color: #000;
+  background: #d80408;
+  }
 }
 
 /* =====================
@@ -114,9 +165,6 @@
   }
 }
 
-/* =====================
-   SERVICES
-===================== */
 .services-box {
   border: 1px dashed #333;
   border-radius: 8px;
