--- a/src/pages/admin/sidebar.scss
+++ b/src/pages/admin/sidebar.scss
@@ -1,39 +1,57 @@
 .sidebar {
-  width: 260px;
+  height: 100vh;
+  width: 12vw;
   background: #111;
   border-right: 1px solid #222;
   padding: 30px 20px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
+.top{
+  display: flex;
+  flex-direction: column;
+  gap: 3vw;
+}
 .logo {
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 40px;
-  letter-spacing: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  img{
+    object-fit: contain;
+    width: 6.5vw;
+    aspect-ratio: 2/1;
+  }
 }
 
 .logout-btn{
-  font-size: 1.2vw;
-  top: 1.5vw;
+  font-size: 1vw;
   padding: 0.5vw 1vw;
+  background-color: #ff6a00;
+
+  &:hover {
+    background-color: red;
+    color: white;
+  }
 }
 nav{
     display: flex;
     flex-direction: column;
+    gap: 1vw;
 }
 nav button {
   background: none;
   border: none;
   color: white;
-  padding: 12px 0;
+  padding:auto;
   text-align: left;
   cursor: pointer;
-  font-size: 1.2vw;
+  font-size: 1vw;
   transition: color 0.2s ease;
 
   &:hover {
+    background-color: #ff6a00;
     color: #fff;
   }
 
