--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -29,6 +29,7 @@
     width: 71%;
 
     .info {
+      justify-content: start;
       display: flex;
       gap: 1.822916667vw;
       align-items: center;
@@ -59,7 +60,7 @@
     z-index: 1;
     position: absolute;
     right: -9%;
-    top: 6.4%;
+    top: 12.4%;
     transform: rotateY(180deg);
   }
 
