--- a/src/pages/home/sections/delivery/delivery.scss
+++ b/src/pages/home/sections/delivery/delivery.scss
@@ -10,6 +10,7 @@
   .top {
     display: flex;
     justify-content: space-between;
+    flex-direction: row;
     align-items: center;
 
     .tHead {
