--- a/src/pages/home/sections/weProvide/weProvide.scss
+++ b/src/pages/home/sections/weProvide/weProvide.scss
@@ -9,6 +9,7 @@
     padding: 0 5%;
     display: flex;
     justify-content: space-between;
+    flex-direction: row;
 
     .heading {
       color: #fff;
