--- a/src/pages/admin/InvoicesPage/invoicesPage.scss
+++ b/src/pages/admin/InvoicesPage/invoicesPage.scss
@@ -161,3 +161,36 @@
   cursor: not-allowed;
   background: #000;
 }
+
+.actions {
+  display: flex;
+  gap: 10px;
+}
+
+.edit-btn {
+  padding: 6px 12px;
+  background: #2d6baa;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  cursor: pointer;
+
+  &:hover {
+    background: #ffffff;
+  }
+}
+
+.delete-btn {
+  padding: 6px 12px;
+  background: #0f0f0f;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  cursor: pointer;
+
+  &:hover {
+    background: #ff0000;
+  }
+}
