--- a/src/pages/admin/InvoicesPage/invoicesPage.scss
+++ b/src/pages/admin/InvoicesPage/invoicesPage.scss
@@ -78,7 +78,7 @@
 
   th,
   td {
-    width: 21%;
+    width: 18%;
     letter-spacing: 2px;
     padding: 10px;
     text-align: left;
@@ -164,7 +164,9 @@
 
 .actions {
   display: flex;
-  gap: 10px;
+  align-items: center;
+  display: flex;
+  gap: 1vw;
 }
 
 .edit-btn {
@@ -185,7 +187,7 @@
   padding: 6px 12px;
   background: #0f0f0f;
   color: #fff;
-  border: none;
+  border: 0.5px solid #ff0000;
   border-radius: 4px;
   font-size: 14px;
   cursor: pointer;
